Update interfaz grafic
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-land/quote_credit.xml
+++ b/app/src/main/res/layout-land/quote_credit.xml
@@ -5,16 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_margin="@dimen/margin_border_layout"
+    android:padding="@dimen/padding_page"
     android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:cardCornerRadius="@dimen/radius_corner"
+    app:strokeWidth="@dimen/stroke_with"
+    app:cardElevation="@dimen/card_elevator">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/space_min"
             android:orientation="vertical" >
 
 
@@ -42,7 +48,12 @@
         tools:layout_editor_absoluteX="0dp">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/space_min"
+            app:endIconMode="clear_text"
+            app:prefixText="$"
+            android:layout_weight="1">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etNameItem"
@@ -56,7 +67,12 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="2">
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            app:endIconMode="clear_text"
+            android:layout_margin="@dimen/space_min"
+            app:suffixText="%"
+            android:layout_weight="2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etTax"
@@ -70,7 +86,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="2">
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/space_min"
+            app:endIconMode="clear_text"
+            android:layout_weight="2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMonths"
@@ -94,19 +114,26 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="1dp">
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnCalc"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnClear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_margin="@dimen/space_min"
+            android:text="@string/clear"
+            app:icon="@drawable/ic_baseline_cleaning_services_24" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnCalc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="12"
+            android:layout_margin="@dimen/space_min"
             android:text="@string/calc"
             app:icon="@android:drawable/ic_menu_search" />
 
@@ -116,40 +143,27 @@
         android:id="@+id/lyInterestValue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/space_top"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textView8"
-            android:layout_width="76dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:paddingLeft="10dp"
-            android:text="@string/quote_value"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            app:prefixText="@string/quote_value"
+            android:paddingLeft="@dimen/margin_start_input_layout"
+            android:textStyle="bold" >
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="$"
-            android:textAlignment="textEnd"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvQuoteValue"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="@string/quote_credit_hint"
-            android:textSize="18sp"
+            android:hint="@string/quote_credit_hint"
+            android:textAlignment="center"
             android:textStyle="bold" />
-
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -159,23 +173,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="1dp">
 
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_margin="@dimen/space_min"
             android:layout_weight="1"
             android:text="@string/save"
             app:icon="@android:drawable/ic_input_add" />
 
-        <Button
-            android:id="@+id/btnClear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/clear"
-            app:icon="@drawable/ic_baseline_cleaning_services_24" />
+
     </LinearLayout>
         </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
