--- a/app/src/main/res/layout/spinner1.xml
+++ b/app/src/main/res/layout/spinner1.xml
@@ -2,6 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/spinner_text_view">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/colorPrimary"
+    android:id="@+id/spinner_text_view"
+    android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_24"
+    app:drawableTint="?android:attr/textColorPrimary"
+    android:padding="15dp"
+    android:text="Input text here">
 
 </TextView>
