--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,12 @@
     <dimen name="perfil_image_size">64dp</dimen>
     <dimen name="margin_border_layout">10dp</dimen>
     <dimen name="open_menu">0dp</dimen>
-
+    <dimen name="margin_start_input_layout">20dp</dimen>
+    <dimen name="space_top">5dp</dimen>
+    <dimen name="space_min">5dp</dimen>
+    <dimen name="radius_corner">12dp</dimen>
+    <dimen name="stroke_with">1dp</dimen>
+    <dimen name="card_elevator">2dp</dimen>
+    <dimen name="padding_page">10dp</dimen>
+    <dimen name="autocomplete_padding_left">20dp</dimen>
 </resources>
