--- a/app/src/main/res/layout-land/quote_credit_save.xml
+++ b/app/src/main/res/layout-land/quote_credit_save.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/margin_border_layout">
-
-    <LinearLayout
+    android:padding="@dimen/padding_page">
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        app:cardCornerRadius="@dimen/radius_corner"
+        app:strokeWidth="@dimen/stroke_with"
+        app:cardElevation="@dimen/card_elevator">
     <LinearLayout
-        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        android:padding="@dimen/space_min"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView15"
@@ -26,150 +25,128 @@
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold" />
-    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView25"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/name"
-                android:textStyle="bold" />
+                app:endIconMode="clear_text"
+                android:hint="@string/name">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="@string/name"
                 android:inputType="textPersonName" />
-        </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="@dimen/space_min"
                 android:layout_weight="1"
-                android:orientation="horizontal"
-                android:text="@string/credit_value"
-                android:textStyle="bold" />
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/credit_value"
+                android:textStyle="bold" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvValueCreditSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/quote_credit_hint"
                 android:textAlignment="textEnd" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_margin="@dimen/space_min"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
                 android:layout_weight="1"
-                android:text="@string/tax"
-                android:textStyle="bold" />
+                app:prefixText="@string/tax"
+                android:textStyle="bold" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvInterestSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/interest_value_hint"
                 android:textAlignment="textEnd" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_margin="@dimen/space_min"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
                 android:layout_weight="1"
-                android:text="@string/months"
-                android:textStyle="bold" />
+                app:prefixText="@string/months"
+                android:textStyle="bold" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvMonthsSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/months_number_hint"
                 android:textAlignment="textEnd" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView22"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/quote_credit"
-                android:textStyle="bold" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/quote_credit"
+                android:textStyle="bold" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvQuoteValueSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/quote_credit_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
-        android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout">
-
-            <Button
-                android:id="@+id/btnSave"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:text="@string/save"
-                app:icon="@android:drawable/ic_menu_save" />
 
             <Button
                 android:id="@+id/btnCancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_min"
                 android:layout_weight="1"
                 android:text="@string/cancel"
                 app:icon="@android:drawable/ic_menu_close_clear_cancel" />
-    </LinearLayout>
-    </LinearLayout>
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:text="@string/save"
+                app:icon="@android:drawable/ic_menu_save" />
 
+    </LinearLayout>
+    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
