--- a/app/src/main/res/layout-land/quote_credit_save_item_list.xml
+++ b/app/src/main/res/layout-land/quote_credit_save_item_list.xml
@@ -4,16 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
-    app:layout_dodgeInsetEdges="all">
+    app:cardCornerRadius="12dp"
+    app:strokeWidth="1dp"
+    app:cardElevation="2dp"
+    >
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorPrimary"
+            android:orientation="vertical"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp"
+            app:layout_dodgeInsetEdges="all">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -238,4 +250,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
     </LinearLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
