--- a/app/src/main/res/layout-sw600dp-land/bought_item_list.xml
+++ b/app/src/main/res/layout-sw600dp-land/bought_item_list.xml
@@ -4,17 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="50dp"
     android:layout_marginTop="25dp"
-    android:layout_marginRight="50dp"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
     app:layout_dodgeInsetEdges="all">
-
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="50dp"
+    android:layout_marginRight="50dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="2dp"
+    app:strokeWidth="1dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp">
     <LinearLayout
         android:id="@+id/llTitleBought"
         android:layout_width="match_parent"
@@ -101,6 +109,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
+            android:background="#00FFFFFF"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
@@ -220,5 +229,6 @@
 
     </LinearLayout>
 
-
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
