--- a/app/src/main/res/layout-sw600dp/fragment_list_bought.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_list_bought.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/margin_border_layout"
     tools:context=".controller.ListBought">
 
@@ -22,68 +23,73 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/lbCurrentCapitalList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/current_capital_value_short" />
+                    app:prefixText="@string/current_capital_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvCurrentCapitalList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbQuoteCapitalList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/quote_capital_value_short" />
+                    app:prefixText="@string/quote_capital_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvQuoteCapitalList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbCurrentInterestList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/space_min"
+                    android:padding="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/current_interest_value_short" />
+                    app:prefixText="@string/current_interest_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvCurrentInterestList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="viewEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbQuoteInterestList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="@string/quote_interest_value_short" />
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
+                    app:prefixText="@string/quote_interest_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvQuoteInterestList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -92,68 +98,73 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/lbCapitalList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/capital_value_short" />
+                    app:prefixText="@string/capital_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvCapitalList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbInterestList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/interest_value_short" />
+                    android:text="@string/interest_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvInterestList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbPendingToPayList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/pending_to_pay_short" />
+                    app:prefixText="@string/pending_to_pay_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvPendingToPayList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="viewEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:id="@+id/lbTotalQuoteList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/space_min"
+                    android:layout_margin="@dimen/space_min"
+                    android:background="@color/green_light_trans"
                     android:layout_weight="1"
-                    android:text="@string/total_quote_value_short" />
+                    app:prefixText="@string/total_quote_value_short" >
 
-                <TextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tvTotalQuoteList"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/money_hint"
+                    android:hint="@string/money_hint"
                     android:textAlignment="textEnd" />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
