--- a/app/src/main/res/layout-sw600dp/quotes_paid_item_list.xml
+++ b/app/src/main/res/layout-sw600dp/quotes_paid_item_list.xml
@@ -4,22 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:background="?attr/colorPrimary"
     android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
-    app:layout_dodgeInsetEdges="all">
 
+    app:layout_dodgeInsetEdges="all">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        app:cardCornerRadius="12dp"
+        app:strokeWidth="1dp"
+        app:cardElevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="5dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
+        android:background="?attr/colorPrimary"
         tools:layout_editor_absoluteY="5dp">
 
         <LinearLayout
@@ -120,11 +126,12 @@
 
         <ImageButton
             android:id="@+id/btnShowPaid"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="42dp"
             android:layout_weight="1"
+            android:background="#00FFFFFF"
             app:srcCompat="@android:drawable/ic_search_category_default" />
 
     </LinearLayout>
-
+</com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
