--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -4,21 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:background="?attr/colorPrimary"
     android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
     app:layout_dodgeInsetEdges="all">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        app:cardCornerRadius="12dp"
+        app:strokeWidth="1dp"
+        app:cardElevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:background="?attr/colorPrimary"
+        android:paddingBottom="5dp"
+        >
     <LinearLayout
         android:id="@+id/llTitleBought"
         android:layout_width="match_parent"
@@ -53,6 +59,7 @@
             android:id="@+id/btnDeleteItemLCCS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#04FFFFFF"
             app:srcCompat="@drawable/ic_baseline_delete_24" />
 
     </LinearLayout>
@@ -300,4 +307,5 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
