--- a/app/src/main/res/layout/buy_wallet_credit_card.xml
+++ b/app/src/main/res/layout/buy_wallet_credit_card.xml
@@ -5,9 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_margin="@dimen/margin_border_layout"
+    android:layout_margin="@dimen/padding_page"
     android:orientation="vertical">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="@dimen/radius_corner"
+        app:strokeWidth="@dimen/stroke_with"
+        app:cardElevation="@dimen/card_elevator">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/space_min"
+            android:orientation="vertical">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -31,21 +44,23 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lCreditCardAssignCACC"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/assing_credit_Card"
-            android:textStyle="bold" />
+            android:layout_margin="@dimen/space_min"
+            android:padding="@dimen/space_min"
+            android:background="@color/green_light_trans"
+            app:prefixText="@string/assing_credit_Card"
+            android:textStyle="bold" >
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/etCreditCardAssignBWCC"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/margin_start_input_layout"
             android:hint="@string/assing_credit_Card" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -55,23 +70,24 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/llCreditCardAssignCACC">
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lDateCACC"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/bought_date_time"
-            android:textStyle="bold" />
+            android:padding="@dimen/space_min"
+            app:endIconMode="clear_text"
+            android:hint="@string/bought_date_time">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dtBoughtBWCC"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/format_date"
             android:inputType="date"
+            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
             android:textAlignment="textEnd" />
+
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -83,21 +99,18 @@
         app:layout_constraintTop_toBottomOf="@+id/llDateCACC"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/lNameItemCACC"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/product_name"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/etNameItemBWCC"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/product_name" />
+            app:endIconMode="clear_text"
+            android:padding="@dimen/space_min"
+            android:hint="@string/product_name">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etNameItemBWCC"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -109,131 +122,83 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3CACC"
         tools:layout_editor_absoluteX="1dp">
 
-        <TextView
-            android:id="@+id/lProductValueCACC"
-            android:layout_width="261dp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/product_value"
-            android:textStyle="bold" />
+            android:padding="@dimen/space_min"
+            app:endIconMode="clear_text"
+            app:prefixText="$"
+            android:hint="@string/product_value">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etProductValueBWCC"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/money_hint"
             android:inputType="numberSigned|numberDecimal"
-            android:numeric="decimal"
-            android:singleLine="false"
-            android:textAlignment="textEnd" />
+            android:singleLine="false"/>
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayoutTaxCACC"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linerLayoutValuesCACC"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
-            android:id="@+id/textView5CACC"
-            android:layout_width="138dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="15dp"
-            android:paddingRight="10dp"
-            android:text="@string/tax"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_min"
+            android:padding="@dimen/space_min"
+            android:background="@color/green_light_trans"
+            app:prefixText="@string/tax"
             android:textAlignment="viewStart"
-            android:textStyle="bold" />
+            android:textStyle="bold" >
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/etTaxBoughtBWCC"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:hint="0.0"
             android:inputType="numberSigned"
-            android:textAlignment="textEnd" />
+            android:textAlignment="center" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView6CACC"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/percent_symbol" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutCACC"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutTaxCACC"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
-            android:id="@+id/textView7CACC"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/months"
-            android:textStyle="bold" />
+            android:layout_margin="@dimen/space_min"
+            android:padding="@dimen/space_min"
+            android:background="@color/green_light_trans"
+            app:prefixText="@string/months"
+            android:textStyle="bold" >
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvMontBWCC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/months_number_hint" />
+            android:hint="@string/months_number_hint"
+            android:textAlignment="center"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayoutQuoteValueCACC"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCACC"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lQuoteValueCACC"
-            android:layout_width="81dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:paddingTop="13dp"
-            android:paddingRight="10dp"
-            android:text="@string/quotes_value"
-            android:textStyle="bold" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/space_min"
+            android:layout_margin="@dimen/space_min"
+            android:background="@color/green_light_trans"
+            app:prefixText="@string/quotes_value"
+            android:textStyle="bold" >
 
         <TextView
             android:id="@+id/etQuoteValueBWCC"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ems="10"
             android:hint="@string/money_hint"
             android:inputType="number|textPersonName"
-            android:textAlignment="textEnd" />
-    </LinearLayout>
+            android:textAlignment="center" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -242,22 +207,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="1dp">
 
-        <Button
-            android:id="@+id/btnSaveBoughtBWCC"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:text="@string/save"
-            app:icon="@android:drawable/ic_menu_save" />
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnClearBoughtBWCC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_margin="@dimen/space_min"
             android:text="@string/clear"
             app:icon="@drawable/ic_baseline_cleaning_services_24" />
-    </LinearLayout>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSaveBoughtBWCC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_min"
+            android:layout_weight="1"
+            android:text="@string/save"
+            app:icon="@android:drawable/ic_menu_save" />
+
+
+    </LinearLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
