--- a/app/src/main/res/layout/credit_card_item_list.xml
+++ b/app/src/main/res/layout/credit_card_item_list.xml
@@ -4,21 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp"
     app:layout_dodgeInsetEdges="all">
-
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    app:cardCornerRadius="12dp"
+    app:strokeWidth="1dp"
+    app:cardElevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="?attr/colorPrimary"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp">
 
         <LinearLayout
             android:id="@+id/llTitleBought"
@@ -42,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:background="#00FFFFFF"
                 app:srcCompat="@drawable/ic_baseline_edit_24" />
 
             <ImageButton
@@ -49,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:background="#00FFFFFF"
                 app:srcCompat="@drawable/ic_baseline_delete_24" />
 
         </LinearLayout>
@@ -133,5 +139,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
+</com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
