--- a/app/src/main/res/layout/fragment_about_it.xml
+++ b/app/src/main/res/layout/fragment_about_it.xml
@@ -7,7 +7,12 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     tools:context=".finanzas.controller.AboutIt">
-
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12dp"
+        app:strokeWidth="1dp"
+        app:cardElevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -80,5 +85,6 @@
         </LinearLayout>
 
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
