--- a/app/src/main/res/layout/fragment_g_drive_connect.xml
+++ b/app/src/main/res/layout/fragment_g_drive_connect.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".finanzas.controller.GDriveConnectFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="12dp"
+        app:strokeWidth="1dp"
+        app:cardElevation="2dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,5 +37,5 @@
             android:layout_height="wrap_content"
             android:text="Logout" />
     </LinearLayout>
-
+    </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
