--- a/app/src/main/res/layout/fragment_list_credit_card_setting.xml
+++ b/app/src/main/res/layout/fragment_list_credit_card_setting.xml
@@ -36,20 +36,25 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-            android:id="@+id/btnAddNewCCS"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:text="@string/add_credit_card" />
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCancelLCCS"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/space_min"
             android:layout_weight="1"
+            app:icon="@android:drawable/ic_menu_close_clear_cancel"
             android:text="@string/cancel" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnAddNewCCS"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_min"
+            app:icon="@android:drawable/ic_menu_save"
+            android:layout_weight="1"
+            android:text="@string/add_credit_card" />
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
