--- a/app/src/main/res/layout/quote_credit_save_variable.xml
+++ b/app/src/main/res/layout/quote_credit_save_variable.xml
@@ -4,21 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp">
+    android:padding="@dimen/padding_page">
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="@dimen/radius_corner"
+        app:strokeWidth="@dimen/stroke_with"
+        app:cardElevation="@dimen/card_elevator">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/space_min"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints">
 
             <TextView
                 android:id="@+id/textView15"
@@ -28,158 +26,126 @@
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:textStyle="bold" />
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView25"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/name" />
+                app:endIconMode="clear_text"
+                android:hint="@string/name" >
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints=""
-                android:ems="10"
-                android:hint="@string/name"
                 android:inputType="textPersonName" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:text="@string/credit_value" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/credit_value" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvValueCreditSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/quote_credit_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView18"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/tax" />
+                android:layout_margin="@dimen/space_min"
+                android:padding="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/tax" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvInterestSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/interest_value_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView20"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/months" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/months" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvMonthsSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/months_number_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <TextView
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/capital_value" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/capital_value" >
 
-            <TextView
+        <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvCapitalValueSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/quote_credit_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
+        <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/interest_value" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/interest_value" >
 
-            <TextView
+        <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvInterestValueSaveVariable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/interest_value_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
+                android:textAlignment="center" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
+        <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textView22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/quote_credit" />
+                android:padding="@dimen/space_min"
+                android:layout_margin="@dimen/space_min"
+                android:background="@color/green_light_trans"
+                app:prefixText="@string/quote_credit" >
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvQuoteValueSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/quote_credit_hint"
-                android:textAlignment="textEnd" />
-        </LinearLayout>
-
+                android:textAlignment="center" />
+        </com.google.android.material.textfield.TextInputLayout>
         <LinearLayout
         android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
@@ -188,20 +154,24 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout">
 
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:text="@string/save" />
+            <Button
+                android:id="@+id/btnCancel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="@dimen/space_min"
+                app:icon="@android:drawable/ic_menu_close_clear_cancel"
+                android:text="@string/cancel" />
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/space_min"
+                android:layout_weight="1"
+                android:text="@string/save"
+                app:icon="@android:drawable/ic_menu_save"/>
 
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/cancel" />
     </LinearLayout>
     </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
