--- a/app/src/main/res/layout/spinner_bigger.xml
+++ b/app/src/main/res/layout/spinner_bigger.xml
@@ -8,16 +8,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/green_background"
         android:orientation="vertical">
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvValueBigSp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="24sp"
+            android:padding="15dp"
             android:textStyle="bold" />
+
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
