--- a/app/src/main/res/layout/tax_item_list.xml
+++ b/app/src/main/res/layout/tax_item_list.xml
@@ -4,21 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
+    app:layout_dodgeInsetEdges="all">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="12dp"
+        app:strokeWidth="1dp"
+        app:cardElevation="2dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingLeft="5dp"
     android:paddingTop="5dp"
     android:paddingRight="5dp"
-    android:paddingBottom="5dp"
-    app:layout_dodgeInsetEdges="all">
-
+    android:background="?attr/colorPrimary"
+    android:paddingBottom="5dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+
+        >
 
         <LinearLayout
             android:id="@+id/llTitleBought"
@@ -61,9 +70,10 @@
 
             <ImageButton
                 android:id="@+id/btnDeleteItemLCCS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="50dp"
                 android:layout_weight="0"
+                android:background="#00FFFFFF"
                 app:srcCompat="@drawable/ic_baseline_delete_24" />
 
         </LinearLayout>
@@ -109,5 +119,6 @@
 
 
     </LinearLayout>
-
+</LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
