--- a/app/src/main/res/menu/first_menu.xml
+++ b/app/src/main/res/menu/first_menu.xml
@@ -7,33 +7,25 @@
     >
     <item
         android:id="@+id/item_menu_side_quoteCredit"
-        android:enabled="true"
-        android:icon="@drawable/ic_sum"
-        android:title="@string/quote_credit"
-
-        android:visible="true" />
+        android:icon="@drawable/ic_baseline_permanent"
+        android:titleCondensed="@string/quote_credit"
+        android:title="@string/quote_credit" />
 
     <item
         android:id="@+id/item_menu_side_quoteCreditVariable"
-        android:enabled="true"
-        android:icon="@drawable/ic_sum"
+        android:icon="@drawable/ic_baseline_varable"
         android:title="@string/quote_credit_variable"
-
-        android:visible="true" />
+        android:titleCondensed="@string/quote_credit_variable"/>
 
     <item
         android:id="@+id/item_menu_side_listsave"
-        android:enabled="true"
         android:icon="@drawable/ic_sum"
         android:title="@string/list_save"
-
-        android:visible="true" />
+        android:titleCondensed="@string/list_save"/>
 
     <item
         android:id="@+id/item_menu_side_boughtmade"
-        android:enabled="true"
-        android:icon="@drawable/ic_sum"
+        android:icon="@drawable/ic_credit_card_foreground"
         android:title="@string/bought_made"
-        app:showAsAction="ifRoom"
-        android:visible="true" />
+        android:titleCondensed="@string/bought_made"/>
 </menu>
